# budget-dashboard

./: .gitignore  README.md  app.py  ofx_parser.py  pyproject.toml  requirements.txt  run.py  setup.sh
budget_dashboard/: app.py
budget_dashboard/parsers/: ofx_parser.py
