[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "budget-dashboard"
version = "0.1.0"
description = "A comprehensive budget dashboard for visualizing personal finances"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Budget Dashboard Developer"}
]
dependencies = [
    "dash>=2.9.3",
    "dash-bootstrap-components>=1.4.1",
    "plotly>=5.14.1",
    "pandas>=2.0.1",
    "ofxparse>=0.21",
    "numpy>=1.26.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.hatch.build.targets.wheel]
packages = ["budget_dashboard"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88 